build/log/idf_py_stderr_output_43795
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'app_main':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:545:10: error: 'periph_adc_button_cfg_t' has no member named 'gpio'
  545 |         .gpio = GPIO_NUM_39,
      |          ^~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:545:17: error: initialization of 'adc_arr_t *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  545 |         .gpio = GPIO_NUM_39,
      |                 ^~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:545:17: note: (near initialization for 'adc_btn_cfg.arr')
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:546:10: error: 'periph_adc_button_cfg_t' has no member named 'gpio_mask'
  546 |         .gpio_mask = GPIO_SEL_39,
      |          ^~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:546:22: error: 'GPIO_SEL_39' undeclared (first use in this function); did you mean 'GPIO_NUM_39'?
  546 |         .gpio_mask = GPIO_SEL_39,
      |                      ^~~~~~~~~~~
      |                      GPIO_NUM_39
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:546:22: note: each undeclared identifier is reported only once for each function it appears in
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:547:10: error: 'periph_adc_button_cfg_t' has no member named 'array_size'; did you mean 'arr_size'?
  547 |         .array_size = 6,
      |          ^~~~~~~~~~
      |          arr_size
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:548:10: error: 'periph_adc_button_cfg_t' has no member named 'adc_volume'
  548 |         .adc_volume = adc_btn_vol
      |          ^~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:548:23: warning: excess elements in struct initializer
  548 |         .adc_volume = adc_btn_vol
      |                       ^~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:548:23: note: (near initialization for 'adc_btn_cfg')
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:544:43: error: missing braces around initializer [-Werror=missing-braces]
  544 |     periph_adc_button_cfg_t adc_btn_cfg = {
      |                                           ^
......
  547 |         .array_size = 6,
      |                       {}
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
